// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <ProfileImage
    alt="A profile image"
    fit="cover"
    height="75"
    src="profile.jpg"
    variant="default"
    width="75"
  >
    <Image
      alt="A profile image"
      className="profile-image orion-fusion-theme"
      fit="cover"
      height="75"
      isFluid={false}
      placeholder={
        <img
          alt="A profile image"
          className={
            Array [
              "profile-image placeholder cover default orion-fusion-theme",
            ]
          }
          fit="cover"
          height="75"
          src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA3NSA3NSIgd2lkdGg9Ijc1IiBoZWlnaHQ9Ijc1IiBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJub25lIj48cGF0aCBmaWxsPSJyZ2JhKDEyNywxMjcsMTI3LDAuMDAwMSkiIGQ9Ik0wIDBoNzV2NzVIMHoiLz48L3N2Zz4="
          variant="default"
          width="75"
        />
      }
      src="profile.jpg"
      variant="default"
      width="75"
    >
      <img
        alt="A profile image"
        className="image cover default orion-fusion-theme hidden profile-image orion-fusion-theme"
        height="75"
        onError={[Function]}
        onLoad={[Function]}
        src="profile.jpg"
        width="75"
      />
      <img
        alt="A profile image"
        className={
          Array [
            "profile-image placeholder cover default orion-fusion-theme",
          ]
        }
        fit="cover"
        height="75"
        src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA3NSA3NSIgd2lkdGg9Ijc1IiBoZWlnaHQ9Ijc1IiBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJub25lIj48cGF0aCBmaWxsPSJyZ2JhKDEyNywxMjcsMTI3LDAuMDAwMSkiIGQ9Ik0wIDBoNzV2NzVIMHoiLz48L3N2Zz4="
        variant="default"
        width="75"
      />
    </Image>
  </ProfileImage>
</ThemeContextProvider>
`;

exports[`should render a Terra image with a placeholder prop 1`] = `
<Image
  alt="A profile image"
  className="profile-image"
  fit="cover"
  height="75"
  isFluid={false}
  placeholder={
    <img
      alt="A profile image"
      className={
        Array [
          "profile-image placeholder cover default",
        ]
      }
      fit="cover"
      height="75"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA3NSA3NSIgd2lkdGg9Ijc1IiBoZWlnaHQ9Ijc1IiBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJub25lIj48cGF0aCBmaWxsPSJyZ2JhKDEyNywxMjcsMTI3LDAuMDAwMSkiIGQ9Ik0wIDBoNzV2NzVIMHoiLz48L3N2Zz4="
      variant="default"
      width="75"
    />
  }
  src="profile.jpg"
  variant="default"
  width="75"
/>
`;

exports[`should render a profile image with fit style as contain 1`] = `
<Image
  alt="A profile image"
  className="profile-image"
  fit="contain"
  height="75"
  isFluid={false}
  placeholder={
    <img
      alt="A profile image"
      className={
        Array [
          "profile-image placeholder contain default",
        ]
      }
      fit="contain"
      height="75"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA3NSA3NSIgd2lkdGg9Ijc1IiBoZWlnaHQ9Ijc1IiBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJub25lIj48cGF0aCBmaWxsPSJyZ2JhKDEyNywxMjcsMTI3LDAuMDAwMSkiIGQ9Ik0wIDBoNzV2NzVIMHoiLz48L3N2Zz4="
      variant="default"
      width="75"
    />
  }
  src="profile.jpg"
  variant="default"
  width="75"
/>
`;

exports[`should render an avatar image without Source prop 1`] = `
<img
  alt="Default"
  className={
    Array [
      "profile-image placeholder cover default",
    ]
  }
  fit="cover"
  height="75"
  src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA3NSA3NSIgd2lkdGg9Ijc1IiBoZWlnaHQ9Ijc1IiBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJub25lIj48cGF0aCBmaWxsPSJyZ2JhKDEyNywxMjcsMTI3LDAuMDAwMSkiIGQ9Ik0wIDBoNzV2NzVIMHoiLz48L3N2Zz4="
  variant="default"
  width="75"
/>
`;
